Fix text alignment of footer on small screens

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -59,12 +59,9 @@ footer {
     height: 50px;
     background-color: var(--muted-bg-color);
     margin-top: 2rem;
+    padding: 1rem;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: center; 
-    align-items: center; 
-    gap: 7px;
+    text-align: center;
 }
 
 footer svg {
@@ -398,4 +395,8 @@ section#get-in-touch button svg {
     section.home#projects-section #projects-container {
         grid-template-columns: 1fr;
     }
+}
+
+@media only screen and (max-width: 375px) {
+    footer { height: 70px; }
 }
